@startuml Patient

skinparam classAttributeIconSize 0
' skinparam monochrome true

package java {
    package util {
    class UUID
    interface List<T>
    }

    package time {
    class LocalDate
    class LocalDateTime
    }
}

package com.acme.kunde.patientenverwaltung.entity #DDDDDD {
    class Termin {
        startZeitpunkt : LocalDateTime
        grund : String
    }

    class Krankenakte {
        erstellungsdatum : LocalDate
        blutgruppe : BlutgruppeType
        vorerkrankungen : List<VorerkrankungType>
        medikamente : List<MedikamentType>
    }

    class Patient << entity >> {
        id : UUID
        vorname : String
        nachname : String
        email : String
        geburtsdatum : LocalDate
        geschlecht : GeschlechtType
    }

    enum AllergienType {
        POLLENALLERGIE
        HAUSTAUBALLERGIE
        TIERHAARALLERGIE
        NAHRUNGSMITTELALLERGIE
    }

    enum BlutgruppeType {
        GRUPPE_A
        GRUPPE_B
        GRUPPE_AB
        GRUPPE_O
    }

    enum GeschlechtType {
        MAENNLICH
        WEIBLICH
        DIVERS
    }

    enum MedikamentType {
        IBUPROFEN
        AMPLODIPIN
        SIMVASTATIN
    }

    enum VorerkrankungType {
        HERZKRANKHEIT
        RUECKENSCHMERZEN
        SCHLAGANFALL
        DEPRESSION
        ALZHEIMER
    }

    Termin ..> LocalDateTime

    Krankenakte .up.> AllergienType
    Krankenakte .up.> BlutgruppeType
    Krankenakte .up.> MedikamentType
    Krankenakte .up.> VorerkrankungType

    Krankenakte ..> LocalDate
    Krankenakte ..> List

    Patient *--> "0..*" Termin : termine
    Patient *--> "1" Krankenakte : krankenakte
    Patient .up.> GeschlechtType

    Patient ..> UUID
    Patient ..> LocalDate
    Patient ..> List
}

hide empty members

footer (c) Jonah Doll, Jürgen Zimmermann

@enduml
